--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -43,7 +43,7 @@
 </h2>
 
 <p class="archive__item-excerpt">
-  {{ post.authors | markdownify }}<br>
+  {{ post.authors | strip_html }}<br>
   <em>{{ post.venue }}{% if post.special_issue %} ({{ post.special_issue }}){% endif %}</em>,
   {{ post.date | date: "%Y" }}
 </p>
@@ -58,9 +58,9 @@
         {% comment %}
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% endcomment %}
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
+        {% endcomment %}
         {% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
