--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,12 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+.archive__item-excerpt {
+  font-size: 1rem;
+  line-height: 1.4;
+}
+
+.archive__item-excerpt em {
+  font-size: 1rem;
+}
